files/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell1
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 10000
    runAsGroup: 10000
  containers:
  - name: shell1
    image: stackrox/kube-linter:latest-alpine
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "64Mi"
        cpu: "10m"
      limits:
        memory: "64Mi"
        cpu: "10m"
    command:
    - sleep
    args:
    - "999999"
    securityContext:
      readOnlyRootFilesystem: true
