files/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell2
spec:
  #securityContext:
  #  runAsNonRoot: true
  #  runAsUser: 10000
  #  runAsGroup: 10000
  containers:
  - name: shell2
    image: ubuntu:lunar
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "8Mi"
        cpu: "10m"
      limits:
        memory: "8Mi"
        cpu: "10m"
    command:
    - sleep
    args:
    - "999999"
    securityContext:
      readOnlyRootFilesystem: true
