files/redis-follower.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-follower
  labels:
    app: redis
    role: follower
spec:
  ports:
  - port: 6379
  selector:
    app: redis
    role: follower
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-follower
  labels:
    app: redis
    role: follower
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
        role: follower
    spec:
      securityContext:
        runAsUser: 1000
# https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: role
                  operator: In
                  values:
                  - follower
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: follower
        image: gcr.io/google_samples/gb-redis-follower:v2
        ports:
        - containerPort: 6379
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
          requests:
            memory: "400Mi"
            cpu: "100m"
