files/networking.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-flask
spec:
  podSelector:
    matchLabels:
      app: webapp
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: redis
              role: leader
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: redis
              role: leader
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-redis-leader
spec:
  podSelector:
    matchLabels:
      app: redis
      role: leader
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: webapp
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: webapp
        - podSelector:
            matchLabels:
              app: redis
              role: follower
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-redis-follower
spec:
  podSelector:
    matchLabels:
      app: redis
      role: follower
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: redis
              role: leader
